terraform/main.tf
resource "aws_security_group" "bad_sg" {
  name = "open-ssh"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "open-ssh"
  }
}
